# repo-context

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
repo_context/: __init__.py  cli.py  repo_converter.py  structure.py  utils.py
tests/: test_repo_converter.py
